{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "PlayerGameplayInputMap",
            "id": "2bd4c766-cf04-40f2-999f-3338295d2046",
            "actions": [
                {
                    "name": "MovementInput",
                    "type": "Value",
                    "id": "be0bfe5c-5d3d-4a75-b3b8-54340adc570a",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "Press(pressPoint=0.1,behavior=2)",
                    "initialStateCheck": true
                },
                {
                    "name": "RotationInput",
                    "type": "Value",
                    "id": "8df869c8-462e-46b4-bf7d-886f6cce3913",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "Press(pressPoint=0.1,behavior=2)",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "Keyboard",
                    "id": "a9171860-1aa1-4d75-9b6e-2385856d4c58",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementInput",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "1e08f76e-a828-4275-bd21-4ee78e51dc83",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementInput",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "d50ada3d-4508-49e9-86d3-3ff1a47ba16b",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementInput",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Keyboard",
                    "id": "9ac58cf9-6cec-419c-9abd-b16bdac152ec",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotationInput",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "b404c828-08e1-4c14-a466-d4f0568d88bd",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotationInput",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "d7c90c4d-5084-4670-8474-52b34fd670e5",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotationInput",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "PlayerDefault",
            "bindingGroup": "PlayerDefault",
            "devices": []
        }
    ]
}